# yadro_test-short_urls-

./: .env  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 015ee375f433_change_urls_org_url_column_type.py  25af1355c6fb_changed_relationship_tables.py  2aaa7aef311b_firt_user.py  44bb6fb9cda5_add_table_with_clicks.py  bca090464624_initial.py  ca3fdfc8c140_changed_name_column.py  ce4ecc38db9f_changed_column_type.py  eea06582b0f2_initial.py
src/: back_tasks.py  main.py  routes.py
src/database/: config.py  connection.py
src/tables/: models.py  schemas.py  urls.py  users.py
