[tool.poetry]
name = "short-urls"
version = "0.1.0"
description = ""
authors = ["jekxkan <smirnova.eyu@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
fastapi = "^0.115.12"
asyncpg = "^0.30.0"
alembic = "^1.16.1"
dotenv = "^0.9.9"
pydantic-settings = "^2.9.1"
passlib = "^1.7.4"
sqlalchemy = "^2.0.41"
apscheduler = "^3.11.0"
uvicorn = "^0.34.3"
python-multipart = "^0.0.20"
bcrypt = "^4.3.0"
pytz = "^2025.2"
ruff = "^0.11.12"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
